- statistics implemented - sonar fixes & clean-up